Fix toggle switches of books from overlapping header

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ header {
 
     position: sticky;
     top: 0;
+    z-index: 1;
 
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -268,7 +269,7 @@ form {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 2;
 
     display: flex;
     flex-direction: column;
